modificacao de uma type, inicio do style no css

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             <section id="first-section">
                 <h2>Handcrafted, home-made masterpieces</h2>
                 <form id="form" action="https://www.freecodecamp.com/email-submit" method="GET"><input id="email"
-                        name="email" type="email" placeholder="Enter your email address" required /><input id="submit"
-                        class="btn" name="submit" value="Get Started" /></form>
+                        name="email" type="email" placeholder="Enter your email address" required />
+                    <input id="submit" type="submit" class="btn" name="submit" value="Get Started" />
+                </form>
             </section>
         </div>
         <div class="container">
